remove db password and fix env

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/cucm25"
 NODE_ENV="development"
 JWT_SECRET="secret_jing_pa"
-KEYCLOAK_API_BASE_URL="localhost:3000/realms/cucm25"
+KEYCLOAK_API_BASE_URL="http://localhost:3000/realms/cucm25"
 KEYCLOAK_CLIENT_ID="mango"
 KEYCLOAK_CLIENT_SECRET="watermelon"
