feat: enhance authentication and user management
- Add KEYCLOAK_PUBLIC_KEY to .env.example for Keycloak integration
- Refactor AuthController to include user retrieval with new 'me' endpoint
- Update UserRepository to handle user creation and retrieval with wallets
- Introduce Wallet model for user wallet management
- Remove mock-related files and functionality
- Update JWT utility functions to support new authentication flow
- Add education level mappings for user roles
- Define new types for authentication and user data

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
     // Paths
     "paths": {
       "@/*": ["./src/*"],
+      "@/constant/*": ["./src/constant/*"],
       "@/controller/*": ["./src/controller/*"],
       "@/repository/*": ["./src/repository/*"],
       "@/router/*": ["./src/router/*"],
