--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "dev": "nodemon --exec \"ts-node -r tsconfig-paths/register src/app.ts\"",
         "test": "jest",
-        "test:watch": "jest --watch"
+        "test:watch": "jest --watch",
+        "mock-user-data": "ts-node src/scripts/testing/mockUserData.ts"
     },
     "repository": {
         "type": "git",
@@ -21,6 +22,7 @@
     },
     "homepage": "https://github.com/isd-sgcu/cucm25-backend#readme",
     "dependencies": {
+        "@dotenvx/dotenvx": "^1.51.0",
         "@prisma/client": "^6.18.0",
         "@types/body-parser": "^1.19.6",
         "@types/cors": "^2.8.19",
