feat: add onboarding schema and seeding
- Question and User schema
- Seeding script with mock data

--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "scripts": {
         "dev": "nodemon --exec \"ts-node -r tsconfig-paths/register src/app.ts\"",
         "test": "jest",
-        "test:watch": "jest --watch"
+        "test:watch": "jest --watch",
+        "seed": "ts-node prisma/seed.ts"
+    },
+    "prisma": {
+        "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
     },
     "repository": {
         "type": "git",
