--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
         "@prisma/client": "^6.18.0",
         "@types/body-parser": "^1.19.6",
         "@types/cors": "^2.8.19",
+        "@types/uuid": "^10.0.0",
         "body-parser": "^2.2.0",
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
         "express": "^5.1.0",
-        "jsonwebtoken": "^9.0.2"
+        "jsonwebtoken": "^9.0.2",
+        "uuid": "^13.0.0"
     },
     "devDependencies": {
         "@types/express": "^5.0.3",
