--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "scripts": {
         "dev": "nodemon --exec \"ts-node -r tsconfig-paths/register src/app.ts\"",
         "test": "jest",
-        "test:watch": "jest --watch",
-        "mock-user-data": "ts-node src/scripts/testing/mockUserData.ts"
+        "test:watch": "jest --watch"
     },
     "repository": {
         "type": "git",
