--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "main": "index.js",
     "scripts": {
         "dev": "nodemon --exec \"ts-node -r tsconfig-paths/register src/app.ts\"",
+        "build": "tsc && tsc-alias",
+        "start": "node build/app.js",
         "test": "jest",
         "test:watch": "jest --watch"
     },
@@ -44,6 +46,7 @@
         "prisma": "^6.18.0",
         "ts-jest": "^29.4.5",
         "ts-node": "^10.9.2",
+        "tsc-alias": "^1.8.16",
         "tsconfig-paths": "^4.2.0",
         "tsx": "^4.20.6",
         "typescript": "^5.9.3"
