--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "dev": "nodemon --exec \"ts-node -r tsconfig-paths/register src/app.ts\"",
+        "dev": "nodemon",
         "build": "tsc && tsc-alias",
-        "start": "node build/app.js",
-        "test": "jest",
-        "test:watch": "jest --watch"
+        "start": "node build/app.js"
     },
     "repository": {
         "type": "git",
@@ -24,31 +22,23 @@
     "homepage": "https://github.com/isd-sgcu/cucm25-backend#readme",
     "dependencies": {
         "@prisma/client": "^6.18.0",
-        "@types/body-parser": "^1.19.6",
-        "@types/cors": "^2.8.19",
-        "@types/uuid": "^10.0.0",
         "body-parser": "^2.2.0",
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
         "express": "^5.1.0",
-        "jsonwebtoken": "^9.0.2",
-        "uuid": "^13.0.0"
+        "jsonwebtoken": "^9.0.2"
     },
     "devDependencies": {
+        "@types/body-parser": "^1.19.6",
+        "@types/cors": "^2.8.19",
         "@types/express": "^5.0.3",
-        "@types/jest": "^30.0.0",
         "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^24.9.1",
-        "eslint": "^9.38.0",
-        "jest": "^30.2.0",
         "nodemon": "^3.1.10",
-        "prettier": "^3.6.2",
         "prisma": "^6.18.0",
-        "ts-jest": "^29.4.5",
         "ts-node": "^10.9.2",
         "tsc-alias": "^1.8.16",
         "tsconfig-paths": "^4.2.0",
-        "tsx": "^4.20.6",
         "typescript": "^5.9.3"
     }
 }
