--- a/package.json
+++ b/package.json
@@ -1,45 +1,48 @@
 {
-    "name": "cucm25-backend",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "dev": "nodemon",
-        "build": "tsc && tsc-alias",
-        "start": "node build/app.js"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/isd-sgcu/cucm25-backend.git"
-    },
-    "type": "commonjs",
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/isd-sgcu/cucm25-backend/issues"
-    },
-    "homepage": "https://github.com/isd-sgcu/cucm25-backend#readme",
-    "dependencies": {
-        "@json2csv/plainjs": "^7.0.6",
-        "@prisma/client": "^6.18.0",
-        "body-parser": "^2.2.0",
-        "cors": "^2.8.5",
-        "dotenv": "^17.2.3",
-        "express": "^5.1.0",
-        "jsonwebtoken": "^9.0.2"
-    },
-    "devDependencies": {
-        "@types/body-parser": "^1.19.6",
-        "@types/cors": "^2.8.19",
-        "@types/express": "^5.0.3",
-        "@types/jsonwebtoken": "^9.0.10",
-        "@types/node": "^24.9.1",
-        "nodemon": "^3.1.10",
-        "prisma": "^6.18.0",
-        "ts-node": "^10.9.2",
-        "tsc-alias": "^1.8.16",
-        "tsconfig-paths": "^4.2.0",
-        "typescript": "^5.9.3"
-    }
+  "name": "cucm25-backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "dev": "nodemon",
+    "build": "tsc && tsc-alias",
+    "start": "node build/app.js",
+    "format": "prettier . --write",
+    "format:check": "prettier . --check"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/isd-sgcu/cucm25-backend.git"
+  },
+  "type": "commonjs",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/isd-sgcu/cucm25-backend/issues"
+  },
+  "homepage": "https://github.com/isd-sgcu/cucm25-backend#readme",
+  "dependencies": {
+    "@json2csv/plainjs": "^7.0.6",
+    "@prisma/client": "^6.18.0",
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2"
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.19.6",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^24.9.1",
+    "nodemon": "^3.1.10",
+    "prettier": "3.7.4",
+    "prisma": "^6.18.0",
+    "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.16",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.9.3"
+  }
 }
