--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon",
     "build": "tsc && tsc-alias",
     "start": "node build/app.js",
+    "test": "echo \"Error: no test specified\" && exit 0",
     "format": "prettier . --write",
     "format:check": "prettier . --check"
   },
@@ -33,6 +34,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
     "@types/body-parser": "^1.19.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
