--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -111,9 +111,9 @@ jobs:
           tags: |
             type=semver,pattern={{raw}}
             type=semver,pattern=v{{major}}
-            type=raw,pattern=latest
-            ${{ github.ref_name == 'main' && 'type=raw,pattern=stable' || '' }}
-            ${{ github.ref_name == 'dev' && 'type=raw,pattern=dev' || '' }}
+            type=raw,value=latest
+            type=raw,value=stable,enable=${{ github.ref_name == 'main' }}
+            type=raw,value=dev,enable=${{ github.ref_name == 'dev' }}
              
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v4
