--- a/.releaserc
+++ b/.releaserc
@@ -1,6 +1,6 @@
 {
-  branches: ["main", {name: "dev", prerelease: true}],
-  plugins: [
+  "branches": ["main", { "name": "dev", "prerelease": true }],
+  "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
@@ -8,7 +8,7 @@
       "assets": [ "CHANGELOG.md", "package.json" ],
       "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
     }],
-    [ "@semantic-release/github", { asserts: "CHANGELOG.md" } ],
-    [ "@semantic-release/exec", { verifyReleaseCmd: "echo \"NEXT_RELEASE_VERSION=${nextRelease.version}\" >> $GITHUB_OUTPUT" } ]
+    [ "@semantic-release/github", { "assets": "CHANGELOG.md" } ],
+    [ "@semantic-release/exec", { "verifyReleaseCmd": "echo \"NEXT_RELEASE_VERSION=${nextRelease.version}\" >> $GITHUB_OUTPUT" } ]
   ]
 }
