--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,6 +66,13 @@ jobs:
           node-version: 'lts/*'
           cache: 'npm'
 
+      - name: Get GitHub Token
+        id: get-token
+        uses: actions/create-github-app-token@v2
+        with:
+          app-id: ${{ vars.ISD_INFRA_APP_ID }}
+          private-key: ${{ secrets.ISD_INFRA_PRIVATE_KEY }}
+
       - name: Install dependencies
         run: npm ci
 
@@ -76,7 +83,7 @@ jobs:
         id: semantic-release
         run: npx semantic-release
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ steps.get-token.outputs.token }}
 
   docker-build:
     name: Build and Push Docker Image
