--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Generate prisma client
         run: npx prisma generate
@@ -74,14 +74,14 @@ jobs:
           private-key: ${{ secrets.ISD_INFRA_PRIVATE_KEY }}
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Generate prisma client
         run: npx prisma generate
 
       - name: Create Release
         id: semantic-release
-        run: npx semantic-release
+        run: npx semantic-release --repositoryUrl https://x-access-token:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY.git
         env:
           GITHUB_TOKEN: ${{ steps.get-token.outputs.token }}
 
