--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,11 +73,19 @@ jobs:
           app-id: ${{ vars.ISD_INFRA_APP_ID }}
           private-key: ${{ secrets.ISD_INFRA_PRIVATE_KEY }}
 
+      - name: Debug App token
+        run: |
+          curl -H "Authorization: Bearer ${{ steps.get-token.outputs.token }}" \
+            -H "Accept: application/vnd.github+json" \
+            https://api.github.com/installation
+
       - name: Install dependencies
         run: npm install
 
       - name: Generate prisma client
         run: npx prisma generate
+
+      
 
       - name: Create Release
         id: semantic-release
