--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,7 +74,7 @@ jobs:
 
       - name: Generate prisma client
         run: npx prisma generate
-     
+
       - name: Create Release
         run: npx semantic-release
         env:
@@ -87,6 +87,7 @@ jobs:
   docker-build:
     name: Build and Push Docker Image
     needs: release
+    if: needs.release.outputs.RELEASE_VERSION != ''
     runs-on: ubuntu-latest
     concurrency:
       group: docker-${{ github.ref }}
@@ -95,7 +96,7 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v6
-        
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -118,9 +119,10 @@ jobs:
             type=semver,pattern={{raw}},value=${{ needs.release.outputs.RELEASE_VERSION }}
             type=semver,pattern=v{{major}}.{{minor}},value=${{ needs.release.outputs.RELEASE_VERSION }}
             type=semver,pattern=v{{major}},value=${{ needs.release.outputs.RELEASE_VERSION }}
+            type=raw,value=latest
             type=raw,value=stable,enable=${{ github.ref_name == 'main' }}
             type=raw,value=dev,enable=${{ github.ref_name == 'dev' }}
-            type=sha,prefix=,suffix=${{ github.actor }}
+            type=sha,prefix=,suffix=-${{ github.actor }}
             type=sha
 
       - name: Build and Push Docker Image
@@ -130,6 +132,5 @@ jobs:
           push: true
           tags: ${{ steps.docker-meta.outputs.tags }}
           labels: ${{ steps.docker-meta.outputs.labels }}
-          platforms: linux/amd64,linux/arm64
           cache-from: type=gha
           cache-to: type=gha,mode=max
