--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Checkout infra repo
         uses: actions/checkout@v6
         with:
-          repository: cucm25-infra
+          repository: isd-sgcu/cucm25-infra
           token: ${{ steps.get-token.outputs.token }}
 
       - name: Resolve image (sha or tag)
