--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,8 +44,7 @@ jobs:
           token: ${{ steps.get-token.outputs.token }}
 
       - name: Resolve image (sha or tag)
-        run: |
-          IMAGE_INPUT="${{ inputs.docker-image-sha-tag }}"
+          IMAGE_INPUT="$(echo "${{ inputs.docker-image-sha-tag }}" | xargs)"
           IMAGE_NAME="ghcr.io/${{ github.repository }}"
 
           if [[ -z "$IMAGE_INPUT" ]]; then
@@ -66,7 +65,7 @@ jobs:
 
       - name: Update compose file with new image tag
         run: |
-          sed -i 's|image: ghcr.io/${{ github.repository }}.*$|image: $FULL_IMAGE|' compose.${{ inputs.environment || github.event.inputs.environment }}.yml
+          sed -i "s|image: ghcr.io/${{ github.repository }}.*$|image: $FULL_IMAGE|" compose.${{ inputs.environment || github.event.inputs.environment }}.yml
           
       - name: Verify change
         run: |
