--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,6 +44,7 @@ jobs:
           token: ${{ steps.get-token.outputs.token }}
 
       - name: Resolve image (sha or tag)
+        run: |
           IMAGE_INPUT="$(echo "${{ inputs.docker-image-sha-tag }}" | xargs)"
           IMAGE_NAME="ghcr.io/${{ github.repository }}"
 
